--- a/release-sain.properties
+++ b/release-sain.properties
@@ -1,4 +1,4 @@
-# version of your extensions in gitlab
+# Version of your extensions in gitlab
 sain.release.extension.version=1.0.0
 
 sain.extensions.nexus.url=liferay.sain.ir
@@ -8,4 +8,4 @@ sain.extensions.repo.name=sain-liferay-portal-extensions
 #
 # Docker Image Tag
 #
-sain.docker.release.version=1.0.2
+sain.docker.release.version=1.0.3
